Avoid inefficient constructors
Original author: jluehe
Date: 2006-10-03 17:51:06+00:00

svn path=/trunk/; revision=579