@@ -216,8 +216,8 @@ public class StandardService
 
         int oldDebug = this.debug;
         this.debug = debug;
-        support.firePropertyChange("debug", new Integer(oldDebug),
-                                   new Integer(this.debug));
+        support.firePropertyChange("debug", Integer.valueOf(oldDebug),
+                                   Integer.valueOf(this.debug));
     }
 
 
